--- a/index.html
+++ b/index.html
@@ -42,8 +42,18 @@
     <tbody>
       <tr>
         <td>Joel</td>
-        <td>M</td>
-        <td>Joel</td>
+        <td>Manly</td>
+        <td>084 384 3947</td>
+      </tr>
+      <tr>
+        <td>Matthew</td>
+        <td>Mucho</td>
+        <td>084 384 2947</td>
+      </tr>
+      <tr>
+        <td>Ben</td>
+        <td>Bradly</td>
+        <td>084 369 3947</td>
       </tr>
     </tbody>
   </table>
