--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
   <title>Revision</title>
 </head>
 <body>
+  <header>
+    <a href="#home">
+      <img class="logo" src="https://www.udja.app/images/INTJ.svg" alt="">
+    </a>
+    <nav class="menu">
+      <ul class="menu-list">
+        <li><a href="#home">Home</a></li>|
+        <li><a href="#about">About</a></li>|
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <!-- Unordered List -->
-  <section>
+  <section id="home">
     <h2>Unordered List</h2>
     <ul>
       <li>Item 1</li>
@@ -19,7 +31,7 @@
     </ul>
   </section>
   <!-- Ordered List -->
-  <section>
+  <section id="about">
     <h2>Ordered List</h2>
     <ol>
       <li>Item 1</li>
@@ -29,41 +41,44 @@
     </ol>
   </section>
   <!-- Table -->
-  <table>
-
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Surname</th>
-        <th>Cellphone Number</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>Joel</td>
-        <td>Manly</td>
-        <td>084 384 3947</td>
-      </tr>
-      <tr>
-        <td>Matthew</td>
-        <td>Mucho</td>
-        <td>084 384 2947</td>
-      </tr>
-      <tr>
-        <td>Ben</td>
-        <td>Bradly</td>
-        <td>084 369 3947</td>
-      </tr>
-    </tbody>
-  </table>
+  <section id="contact">
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Surname</th>
+          <th>Cellphone Number</th>
+        </tr>
+      </thead>
+  
+      <tbody>
+        <tr>
+          <td>Joel</td>
+          <td>Manly</td>
+          <td>084 384 3947</td>
+        </tr>
+        <tr>
+          <td>Matthew</td>
+          <td>Mucho</td>
+          <td>084 384 2947</td>
+        </tr>
+        <tr>
+          <td>Ben</td>
+          <td>Bradly</td>
+          <td>084 369 3947</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+  
   <!-- Image -->
   <section>
     <h2>Image</h2>
     <img src="https://www.udja.app/images/INTJ.svg" alt="bow">
   </section>
 
-  <canvas></canvas>
-  <script src="script.js"></script>
+  <footer>
+    <p>Copyright &copy; 2022</p>
+  </footer>
 </body>
 </html>
