--- a/index.html
+++ b/index.html
@@ -77,6 +77,44 @@
     <img src="https://www.udja.app/images/INTJ.svg" alt="bow">
   </section>
 
+  <section>
+    <h2>Form</h2>
+    <form action="https://formspree.io/f/moqbljbe">
+        <div>
+            <input type="text" name="name" placeholder="Enter your name">
+        </div>
+        <div>
+            <input type="text" name="surname" placeholder="Enter your surname">
+        </div>
+        <div>
+            <input type="password" name="password" placeholder="Enter your password">
+        </div>
+        <div>
+            <span>Male</span> <input type="radio" name="gender">
+            <span>Female</span> <input type="radio" name="gender">
+            <span>Other/Prefer not to say</span> <input type="radio" name="gender">
+        </div>
+        <div>
+            <label>Subjects:</label>
+            <span>HTML 5<input type="checkbox" name="subject" ></span>
+            <span>CSS 3<input type="checkbox" name="subject" ></span>
+            <span>Bootstrap<input type="checkbox" name="subject" ></span>
+            <span>JavaScript<input type="checkbox" name="subject" ></span>
+        </div>
+        <div>
+            <button type="submit">Submit</button>
+        </div>
+    </form>
+</section>
+
+
+
+
+
+
+
+</section>
+
   <footer>
     <p>Copyright &copy; 2022</p>
   </footer>
