--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Revision</title>
 </head>
 <body>
-  <header>
+  <!-- <header>
     <a href="#home">
       <img class="logo" src="https://www.udja.app/images/INTJ.svg" alt="">
     </a>
@@ -19,9 +19,9 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-  </header>
+  </header> -->
   <!-- Unordered List -->
-  <section id="home">
+  <!-- <section id="home">
     <h2>Unordered List</h2>
     <ul>
       <li>Item 1</li>
@@ -29,9 +29,9 @@
       <li>Item 3</li>
       <li>Item 4</li>
     </ul>
-  </section>
+  </section> -->
   <!-- Ordered List -->
-  <section id="about">
+  <!-- <section id="about">
     <h2>Ordered List</h2>
     <ol>
       <li>Item 1</li>
@@ -39,9 +39,9 @@
       <li>Item 3</li>
       <li>Item 4</li>
     </ol>
-  </section>
+  </section> -->
   <!-- Table -->
-  <section id="contact">
+  <!-- <section id="contact">
     <table>
       <thead>
         <tr>
@@ -69,10 +69,10 @@
         </tr>
       </tbody>
     </table>
-  </section>
+  </section> -->
   
   <!-- Image -->
-  <section>
+  <!-- <section>
     <h2>Image</h2>
     <img src="https://www.udja.app/images/INTJ.svg" alt="bow">
   </section>
@@ -105,18 +105,20 @@
             <button type="submit">Submit</button>
         </div>
     </form>
-</section>
+  </section> -->
+  <div class="phone">
+    <ul>
+      <li>Samsung</li>
+      <li>iPhone</li>
+      <li>Nokia</li>
+      <li>OnePlus</li>
+      <li>Huawei</li>
+    </ul>
+  </div>
 
 
-
-
-
-
-
-</section>
-
-  <footer>
+  <!-- <footer>
     <p>Copyright &copy; 2022</p>
-  </footer>
+  </footer> -->
 </body>
 </html>
